# trtc-rust

./: .gitignore  Cargo.toml  README.adoc
features/: colors.feature
features/canvas/: canvas.feature
features/colors/: colors.feature
features/matrix/: matrix.feature
features/transformations/: transformations.feature
features/tuples/: tuples.feature
src/: canvas.rs  colors.rs  lib.rs  matrix.rs  points.rs  transformations.rs  tuples.rs  vectors.rs
tests/: canvas.rs  colors.rs  matrix.rs  transformations.rs  tuples.rs
