[package]
name = "trtc"
version = "0.1.0"
authors = ["Peter C. Norton <spacey@spacey.org>"]
edition = "2018"

[dependencies]
typename = "0.1.1"
docopt = "1"
serde = { version = "1", features = ["derive"] }
ndarray = "^0.13.0"

[[test]]
name = "tuples"
harness = false  # Allows Cucumber to print output instead of libtest

[[test]]
name = "colors"
harness = false  # Allows Cucumber to print output instead of libtest


[[test]]
name = "canvas"
harness = false  # Allows Cucumber to print output instead of libtest

[[test]]
name = "matrix"
harness = false  # Allows Cucumber to print output instead of libtest


[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.6.0" }

